# client_server_util

./: CMakeLists.txt  README.md  run_project.sh
apps/client/: main.cpp
apps/server/: main.cpp
apps/stats_cli/: main.cpp
configs/: patterns.conf.example
demo_files/: infected.txt
docs/: architecture.md
include/client/: client_app.hpp  client_options.hpp  tcp_client.hpp
include/common/: cli_utils.hpp  file_utils.hpp  patterns.hpp  protocol.hpp  scan_statistics.hpp  socket_io.hpp  wire_protocol.hpp
include/server/: client_session.hpp  client_worker.hpp  config_loader.hpp  pattern_matcher.hpp  server_app.hpp  server_options.hpp  signal_state.hpp  stats_fifo_service.hpp  stats_pipe_protocol.hpp  stats_registry.hpp
include/stats_cli/: fifo_stats_client.hpp  stats_client_app.hpp  stats_client_options.hpp
src/client/: client_app.cpp  client_options.cpp  tcp_client.cpp
src/common/: cli_utils.cpp  file_utils.cpp  protocol.cpp  scan_statistics.cpp  socket_io.cpp  wire_protocol.cpp
src/server/: client_session.cpp  client_worker.cpp  config_loader.cpp  pattern_matcher.cpp  server_app.cpp  server_options.cpp  signal_state.cpp  stats_fifo_service.cpp  stats_pipe_protocol.cpp  stats_registry.cpp
src/stats_cli/: fifo_stats_client.cpp  stats_client_app.cpp  stats_client_options.cpp
tests/: client_session_smoke.cpp  end_to_end_smoke.sh  pattern_matcher_smoke.cpp  stats_pipe_protocol_smoke.cpp  wire_protocol_smoke.cpp
